# algograph

./: Cargo.toml  README.md  build-doc.py
benches/: low_level_digraph_impls.rs
src/: lib.rs
src/algorithm/: graphviz.rs  mod.rs  simple_cycle.rs  toposort.rs
src/graph/: edge.rs  graph_debug.rs  mapped_graph.rs  mod.rs  selected_subgraph.rs  shadowed_subgraph.rs  tagged.rs  tagged_graph.rs  trait.rs  vertex.rs
src/graph/digraph/: mod.rs  trait.rs
src/graph/digraph/impl/: mod.rs  petgraph_backed.rs  selected_subgraph.rs  shadowed_subgraph.rs  tree_backed.rs
src/graph/directed/: adjacent_list.rs  mod.rs  petgraph_backed.rs  tree_backed.rs
src/graph/undirected/: adjacent_list.rs  mod.rs  petgraph_backed.rs  tree_backed.rs
src/low_level/: edge.rs  mod.rs
src/low_level/digraph/impl/: petgraph_backed.rs  tree_backed.rs
src/tagged/: mod.rs  naive_impl.rs  traits.rs
