[package]
name = "algograph"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
license-file = "LICENSE"
description = "A (both directed and undirected) graph and their algorithms implemented in Rust"
repository = "https://github.com/TimeExceed/algograph"
readme = "README.md"
categories = ["algorithms", "data-structures"]
keywords = ["graph"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex.html" ]

[dependencies]
hashbrown = "0.13.2"
petgraph = "0.6.2"

[dev-dependencies]
bimap = "0.6.2"
criterion = "0.4.0"
quickcheck_macros = "1"
quickcheck = "1"
rand = "0.8.5"
rs_quickcheck_util = "0.1"
static_init = "1.0.3"

[[bench]]
name = "low_level_digraph_impls"
harness = false
